--- a/src/app/user/add-user/add-user.component.html
+++ b/src/app/user/add-user/add-user.component.html
@@ -1,3 +1,168 @@
-<p>
-  add-user works!
-</p>
+<div class="col-md-8 offset-md-2">
+  <h4 class="mb-3">Add New User</h4>
+  <form class="needs-validation" (ngSubmit)="onSave(f.value)" #f="ngForm">
+    <div class="row">
+      <div class="col-md-12 mb-3">
+        <label for="address">Scan User's QR Code</label>
+        <div *ngIf="availableDevices">
+            <select (change)="onDeviceSelectChange($event.target.value)">
+              <option value="" [selected]="!selectedDevice">No Device</option>
+              <option *ngFor="let device of availableDevices" [value]="device.deviceId" [selected]="selectedDevice && device.deviceId === selectedDevice.deviceId">{{ device.label }}</option>
+            </select>
+          </div>
+          
+          <div [hidden]="!hasCameras">
+          
+            <zxing-scanner #scanner [autofocusEnabled]="true" [cssClass]="'small-video'" start="true" [device]="selectedDevice" (scanSuccess)="handleQrCodeResult($event)"></zxing-scanner>
+
+            <h2 *ngIf="!this.selectedDevice">No camera selected.</h2>
+          
+            <p>
+              Eth Address:
+              <input type="text" class="form-control" name="address" placeholder="" [(ngModel)]="user.address" required>
+            </p>
+          
+          </div>
+          
+          <div *ngIf="!hasCameras && hasPermission === true">
+          
+            <h1>Looks like your actual device does not has cameras, or I could no find'em. </h1>
+          
+          </div>
+          
+          <div *ngIf="hasPermission === undefined">
+          
+            <h1>Waiting for permissions.</h1>
+          
+            <blockquote>
+              <h2>If your device does not has cameras, no permissions will be asked.</h2>
+            </blockquote>
+          
+          </div>
+          
+          <div *ngIf="hasPermission === false">
+          
+            <h1>You denied the camera permissions, we can't scan anything without it. 😪</h1>
+          
+          </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 mb-3">
+        <label for="fullName">Name</label>
+        <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fa fa-user"></i></span>
+            </div>
+            <input type="text" class="form-control" name="fullName" placeholder="" [(ngModel)]="user.fullName" required>
+        </div>
+        <div class="invalid-feedback">
+          Valid full name is required
+        </div>
+      </div>
+    </div>
+
+    <div class="mb-3">
+      <label for="email">Email</label>
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="input-group-text"><i class="fa fa-envelope"></i></span>
+        </div>
+        <input 
+          type="email" 
+          class="form-control" 
+          name="email" 
+          placeholder="you@example.com"
+          [(ngModel)]="user.email" />
+      </div>
+      <div class="invalid-feedback">
+        Please enter a valid email address
+      </div>
+    </div>
+
+    <div class="mb-3">
+      <label for="mobileNumber">Mobile Number</label>
+      <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><i class="fa fa-phone"></i></span>
+          </div>
+          <input 
+            maxlength="10" 
+            type="tel" 
+            class="form-control" 
+            name="mobileNumber" 
+            placeholder="10 digit mobile number"
+            [(ngModel)]="user.mobileNumber">
+      </div>
+      <div class="invalid-feedback">
+        Please enter a valid 10 digit mobile number
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-5 mb-3">
+        <label for="gender">Gender</label>
+        <select [(ngModel)]="user.gender" class="custom-select d-block w-100" name="gender" required>
+          <option value="">Choose...</option>
+          <option value="Male" selected>Male</option>
+          <option value="Female">Female</option>
+        </select>
+        <div class="invalid-feedback">
+          Please select a valid country.
+        </div>
+      </div>
+      <div class="col-md-5 mb-3">
+        <label for="birthdate">Birthdate</label>
+        <input [(ngModel)]="user.birthdate" type="date" class="form-control" name="birthdate" required>
+
+        <div class="invalid-feedback">
+          Valid birthdate is required
+        </div>
+      </div>
+    </div>
+
+    <div class="mb-3">
+      <label for="contactAddress">Address</label>
+      <textarea [(ngModel)]="user.contactAddress" type="text" class="form-control" name="contactAddress" placeholder="1234 Main St" required></textarea>
+      <div class="invalid-feedback">
+        Please enter address of the user
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-5 mb-3">
+        <label for="country">Country</label>
+        <select [(ngModel)]="user.country" class="custom-select d-block w-100" name="country" required>
+          <option value="">Choose...</option>
+          <option value="India" selected>India</option>
+        </select>
+        <div class="invalid-feedback">
+          Please select a valid country.
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 mb-3">
+        <label for="fatherName">Father Name</label>
+        <input [(ngModel)]="user.fatherName" type="text" class="form-control" name="fatherName" placeholder="" value="" required>
+
+        <div class="invalid-feedback">
+          Valid father name is required
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 mb-3">
+        <label for="motherName">Mother Name</label>
+        <input [(ngModel)]="user.motherName" type="text" class="form-control" name="motherName" placeholder="" value="" required>
+
+        <div class="invalid-feedback">
+          Valid mother name is required
+        </div>
+      </div>
+    </div>
+    <div class="text-center"><button class="btn btn-primary" type="submit">Save Details</button></div>
+  </form>
+</div>
