--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,4 @@
 <div class="options-bar">
-    <button class="btn btn-primary">Add User</button>
+    <button (click)="onAddUser()" class="btn btn-primary">Add User</button>
 </div>
 <router-outlet></router-outlet>
