--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -2,7 +2,7 @@
 
   <div class="footer-copyright py-3 text-center">
       © {{ year | date:'yyyy' }} Copyright:
-      <strong> Team TrueID</strong>
+      <strong> Team TrueID</strong> - Acharya Institute of Technology, ISE Department
   </div>
 
 </footer>
