--- a/src/app/provider/provider.component.html
+++ b/src/app/provider/provider.component.html
@@ -1,4 +1,4 @@
 <div class="options-bar">
-    <button class="btn btn-primary">Add Provider</button>
+    <button (click)="onAddProvider()" class="btn btn-primary">Add Provider</button>
 </div>
 <router-outlet></router-outlet>
