--- a/src/app/user/view-user/view-user.component.html
+++ b/src/app/user/view-user/view-user.component.html
@@ -65,7 +65,7 @@
           <option value="Female">Female</option>
         </select>
         <div class="invalid-feedback">
-          Please select a valid country.
+          Please select a valid gender.
         </div>
       </div>
       <div class="col-md-5 mb-3">
