Added web3 Adding User Retrieving and displaying user

--- a/src/app/user/add-user/add-user.component.html
+++ b/src/app/user/add-user/add-user.component.html
@@ -62,7 +62,7 @@
       </div>
     </div>
 
-    <div class="mb-3">
+    <!-- <div class="mb-3">
       <label for="email">Email</label>
       <div class="input-group">
         <div class="input-group-prepend">
@@ -78,9 +78,9 @@
       <div class="invalid-feedback">
         Please enter a valid email address
       </div>
-    </div>
+    </div> -->
 
-    <div class="mb-3">
+    <!-- <div class="mb-3">
       <label for="mobileNumber">Mobile Number</label>
       <div class="input-group">
           <div class="input-group-prepend">
@@ -97,7 +97,7 @@
       <div class="invalid-feedback">
         Please enter a valid 10 digit mobile number
       </div>
-    </div>
+    </div> -->
 
     <div class="row">
       <div class="col-md-5 mb-3">
