--- a/src/app/user/view-user/view-user.component.html
+++ b/src/app/user/view-user/view-user.component.html
@@ -19,7 +19,7 @@
       </div>
     </div>
 
-    <div class="mb-3">
+    <!-- <div class="mb-3">
       <label for="email">Email</label>
       <div class="input-group">
         <div class="input-group-prepend">
@@ -54,7 +54,7 @@
       <div class="invalid-feedback">
         Please enter a valid 10 digit mobile number
       </div>
-    </div>
+    </div> -->
 
     <div class="row">
       <div class="col-md-5 mb-3">
