dummy adding user dummy editing user dummy deleteing user dummy adding provider dummy deleting provider

--- a/src/app/provider/provider-list/provider-list-item/provider-list-item.component.html
+++ b/src/app/provider/provider-list/provider-list-item/provider-list-item.component.html
@@ -2,6 +2,6 @@
   <div class="card-body">
     <h5 class="card-title">{{ index }}. {{ provider.name }}</h5>
     <p class="card-text">Address: {{ provider.address }}</p>
-    <button type="button" class="btn btn-danger pull-right">Delete</button>
+    <button (click)="onClickDelete()" type="button" class="btn btn-danger pull-right">Delete</button>
   </div>
 </div>
