--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,5 @@
 <div class="options-bar">
     <button (click)="onAddUser()" class="btn btn-primary">Add User</button>
+    <button (click)="onReset()" class="btn btn-danger">Reset (debug)</button>
 </div>
 <router-outlet></router-outlet>
