--- a/src/app/user/view-user/view-user.component.html
+++ b/src/app/user/view-user/view-user.component.html
@@ -1,5 +1,5 @@
 <div class="options-bar">
-  <button class="btn btn-danger">Delete User</button>
+  <button (click)="onDeleteUser()" class="btn btn-danger">Delete User</button>
 </div>
 <div class="col-md-8 offset-md-2">
   <h4 class="mb-3">User Details</h4>
