--- a/src/app/provider/provider-list/provider-list.component.html
+++ b/src/app/provider/provider-list/provider-list.component.html
@@ -1,6 +1,9 @@
 <ul>
   <li *ngFor="let provider of providers; let i = index">
-    <app-provider-list-item [provider]="provider" [index]="i + 1">
+    <app-provider-list-item 
+      [provider]="provider" 
+      [index]="i + 1"
+      (deleteProvider)="onDeleteProvider($event)">
     </app-provider-list-item>
   </li>
 </ul>
