--- a/src/app/user/user-list/user-list-item/user-list-item.component.html
+++ b/src/app/user/user-list/user-list-item/user-list-item.component.html
@@ -3,6 +3,6 @@
     <h5 class="card-title">{{ index }}. {{ user.fullName }}</h5>
     <p class="card-text">Address: {{ user.address }}</p>
     <button type="button" (click)="onClickView()" class="btn btn-info">View</button>
-    <button type="button" class="btn btn-danger pull-right">Delete</button>
+    <button type="button" (click)="onClickDelete()" class="btn btn-danger pull-right">Delete</button>
   </div>
 </div>
