--- a/src/app/user/view-user/view-user.component.html
+++ b/src/app/user/view-user/view-user.component.html
@@ -70,7 +70,7 @@
       </div>
       <div class="col-md-5 mb-3">
         <label for="birthdate">Birthdate</label>
-        <input [(ngModel)]="user.birthdate" appUseValueAsDate type="date" class="form-control" name="birthdate" required>
+        <input [(ngModel)]="user.birthdate" type="date" class="form-control" name="birthdate" required>
 
         <div class="invalid-feedback">
           Valid birthdate is required
